# inventory

./: Dockerfile  README.md  pyproject.toml  wsgi.py
.devcontainer/: Dockerfile
.github/workflows/: bdd.yml  ci.yml  tdd.yml
.tekton/: pipeline.yaml  tasks.yaml  workspace.yaml
.tekton/events/: event_listener.yaml  trigger.yaml  trigger_binding.yaml  trigger_template.yaml
features/: environment.py  inventory.feature
features/steps/: inventory_steps.py  web_steps.py
k8s/: deployment.yaml  ingress.yaml  postgresql.yaml  pv.yaml  secret.yaml  service.yaml
service/: __init__.py  config.py  models.py  routes.py
service/common/: error_handlers.py
service/static/: index.html
service/static/js/: rest_api.js
tests/: factories.py  test_models.py  test_routes.py
